--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -75,11 +75,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Metropolis
-      fonts:
-        - asset: fonts/MetropolisRegular.ttf
-          weight: 600
+  # fonts:
+  #   - family: Metropolis
+  #     fonts:
+  #       - asset: fonts/MetropolisRegular.ttf
+  #         weight: 600
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
